--- a/test-program-for-one-state.ipynb
+++ b/test-program-for-one-state.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,17 +292,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "URL = \"https://results.eci.gov.in/PcResultGenJune2024/statewiseS134.htm\" \n",
+    "URL = \"https://results.eci.gov.in/PcResultGenJune2024/statewiseS212.htm\" \n",
     "r = requests.get(URL) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -319,6 +319,29 @@
     "data = soup.find('body').find('h1').text\n",
     "if \"Not Found\" in data:\n",
     "    print(\"hello\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# finalSoup = BeautifulSoup(\"\", \"html5lib\")\n",
+    "# #for j in range(1, 30):\n",
+    "# for j in range(1,29):\n",
+    "#     URL = f\"https://results.eci.gov.in/PcResultGenJune2024/statewiseS{j:02}1.htm\"\n",
+    "    \n",
+    "#     r = requests.get(URL)\n",
+    "#     soup = BeautifulSoup(r.content, 'html5lib')\n",
+    "#     data = soup.find('body')\n",
+    "#     if type(data) == int:\n",
+    "#         continue\n",
+    "#     data = data.find('h1')\n",
+    "#     if data is None:\n",
+    "#         continue\n",
+    "#     if \"Not Found\" in data:\n",
+    "#         print(j)"
    ]
   }
  ],
