--- a/test-program-for-one-state.ipynb
+++ b/test-program-for-one-state.ipynb
@@ -9,6 +9,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -342,6 +349,89 @@
     "#         continue\n",
     "#     if \"Not Found\" in data:\n",
     "#         print(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlalchemy\n",
+    "from sqlalchemy import create_engine, MetaData, Table, Column, String, Integer, PrimaryKeyConstraint\n",
+    "from sqlalchemy.dialects.mysql import insert\n",
+    "\n",
+    "# Step 1: Create an engine and connect to the database\n",
+    "engine = create_engine(\"mysql+mysqldb://root:nachiket@localhost:3306/LS2024\")\n",
+    "conn = engine.connect()\n",
+    "\n",
+    "# Assuming stateList and res are defined somewhere above\n",
+    "# stateList = [...] # list of state names\n",
+    "# res = {...} # dictionary with state names as keys and list of tuples as values\n",
+    "\n",
+    "metadata = MetaData()\n",
+    "\n",
+    "# Function to sanitize Margin values\n",
+    "def sanitize_margin(value):\n",
+    "    try:\n",
+    "        return int(value)\n",
+    "    except ValueError:\n",
+    "        return None\n",
+    "\n",
+    "# Step 2: Function to create tables and insert data\n",
+    "def create_and_insert_data(stateList, res):\n",
+    "    count = 0\n",
+    "    for state in stateList:\n",
+    "        # Define table structure dynamically\n",
+    "        table = Table(\n",
+    "            state, metadata,\n",
+    "            Column('Constituency', String(255)),\n",
+    "            Column('Const.No', String(255)),\n",
+    "            Column('LeadingCandidate', String(255)),\n",
+    "            Column('LeadingParty', String(255)),\n",
+    "            Column('TrailingCandidate', String(255)),\n",
+    "            Column('TrailingParty', String(255)),\n",
+    "            Column('Margin', Integer),\n",
+    "            Column('Status', String(255)),\n",
+    "            PrimaryKeyConstraint('Const.No')\n",
+    "        )\n",
+    "\n",
+    "        # Create table if it doesn't exist\n",
+    "        table.create(engine, checkfirst=True)\n",
+    "\n",
+    "        # Prepare sanitized data\n",
+    "        sanitized_data = []\n",
+    "        for row in res[state]:\n",
+    "            sanitized_row = list(row)\n",
+    "            sanitized_row[6] = sanitize_margin(sanitized_row[6])  # Sanitize the Margin value\n",
+    "            sanitized_data.append(tuple(sanitized_row))\n",
+    "\n",
+    "        # Prepare the insert statement with an upsert (ON DUPLICATE KEY UPDATE) clause\n",
+    "        insert_stmt = insert(table).values(sanitized_data)\n",
+    "        upsert_stmt = insert_stmt.on_duplicate_key_update(\n",
+    "            Constituency=insert_stmt.inserted.Constituency,\n",
+    "            LeadingCandidate=insert_stmt.inserted.LeadingCandidate,\n",
+    "            LeadingParty=insert_stmt.inserted.LeadingParty,\n",
+    "            TrailingCandidate=insert_stmt.inserted.TrailingCandidate,\n",
+    "            TrailingParty=insert_stmt.inserted.TrailingParty,\n",
+    "            Margin=insert_stmt.inserted.Margin,\n",
+    "            Status=insert_stmt.inserted.Status\n",
+    "        )\n",
+    "\n",
+    "        # Execute the upsert statement\n",
+    "        conn.execute(upsert_stmt)\n",
+    "\n",
+    "        count += len(res[state])\n",
+    "    \n",
+    "    # Commit the transaction\n",
+    "    conn.execute(\"COMMIT\")\n",
+    "    print(f\"{count} records inserted or updated.\")\n",
+    "\n",
+    "# Step 3: Execute the function\n",
+    "create_and_insert_data(stateList, res)\n",
+    "\n",
+    "# Step 4: Close the connection\n",
+    "conn.close()\n"
    ]
   }
  ],
