update: filtered out empty lists

--- a/state-data-from-eci.ipynb
+++ b/state-data-from-eci.ipynb
@@ -73,18 +73,10 @@
     "                temp.append(data.text)\n",
     "            stateData.append(temp)\n",
     "    finalResultData.append(stateData)\n",
-    "\n",
-    "res = dict(zip(stateList, finalResultData))\n",
+    "## filtering empty lists !!important\n",
+    "filteredFinalResultData = list(filter(None, finalResultData))\n",
+    "res = dict(zip(stateList, filteredFinalResultData ))\n",
     "print(stateList)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res['Gujarat']"
    ]
   },
   {
@@ -114,7 +106,7 @@
     "mydb.start_transaction()\n",
     "count = 0;\n",
     "for state in (stateList):\n",
-    "  # if state == 'Gujarat':\n",
+    "  # if state == 'Gujarat': ## gujrat had an uncontessted win so blank values\n",
     "  #   continue\n",
     "  mycursor.execute(f\" CREATE TABLE IF NOT EXISTS`{state}` ( Constituency VARCHAR(255),`Const.No` INT,LeadingCandidate VARCHAR(255),LeadingParty VARCHAR(255),TrailingCandidate VARCHAR(255),TrailingParty VARCHAR(255),Margin VARCHAR(255),Status VARCHAR(255),PRIMARY KEY (`Const.No`))\")\n",
     "  sql = f\"\"\"\n",
@@ -155,6 +147,15 @@
     "\n",
     "mycursor.close()\n",
     "mydb.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   }
  ],
