--- a/test-program-for-one-state.ipynb
+++ b/test-program-for-one-state.ipynb
@@ -433,6 +433,33 @@
     "# Step 4: Close the connection\n",
     "conn.close()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import folium\n",
+    "\n",
+    "# Create a map centered on a specific location\n",
+    "m = folium.Map(location=[37.7749, -122.4194], zoom_start=12)\n",
+    "\n",
+    "# Define the coordinates for the boundary of the area you want to highlight\n",
+    "boundary_coordinates = [\n",
+    "    (37.7749, -122.4194),\n",
+    "    (37.7749, -122.4314),\n",
+    "    (37.7649, -122.4314),\n",
+    "    (37.7649, -122.4194),\n",
+    "    (37.7749, -122.4194)\n",
+    "]\n",
+    "\n",
+    "# Create a GeoJSON polygon layer with the boundary coordinates\n",
+    "folium.Polygon(locations=boundary_coordinates, color='blue', fill=True, fill_opacity=0.5).add_to(m)\n",
+    "\n",
+    "# Save the map to an HTML file\n",
+    "m.save('interactive_map.html')"
+   ]
   }
  ],
  "metadata": {
